# context-bus

./: CONTRIBUTING.md  LICENSE  README.md  install-v3.sh  install.sh  pyproject.toml  uninstall.sh
docs/: ARCHITECTURE-V2.md  ARCHITECTURE-V3.md  CONFIGURATION.md  GETTING-STARTED.md  TROUBLESHOOTING.md
integrations/openclaw/: HEARTBEAT_RULES.md  README.md  SKILL.md  skill.json
scripts/: auto-update-task.sh  context-handoff.sh  generate-summary.sh  update-handoff.sh  update-usage.sh  usage-monitor-v3.sh  usage-monitor.sh
src/context_bus/: cli.py  config.template.yaml
src/context_bus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/context_bus/scripts/: check-usage.sh  handoff-utils.sh  kimi-summarize.sh  model-router.sh  refresh-summary.sh  semantic-context.sh  setup.sh  update-state.sh  update-usage.sh
src/context_bus/templates/: AGENTS.md  MEMORY.md
