[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-bus"
version = "0.1.0"
description = "Automatic model switching for AI coding agents with full context preservation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rajath KM", email = "rajathkm@gmail.com"}
]
keywords = ["ai", "llm", "claude", "codex", "gemini", "model-switching", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[project.scripts]
context-bus = "context_bus.cli:main"

[project.urls]
Homepage = "https://github.com/rajathkm/context-bus"
Documentation = "https://github.com/rajathkm/context-bus#readme"
Repository = "https://github.com/rajathkm/context-bus"
Issues = "https://github.com/rajathkm/context-bus/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
context_bus = ["scripts/*.sh", "templates/*.md", "config.template.yaml"]
